# Langchainbot-with-RAG-and-Voice-

./: .gitignore  README.md  app.py  main.py  pyproject.toml  readme (1).txt  requirements.txt
